--- a/JS_Shaker_2.html
+++ b/JS_Shaker_2.html
@@ -6,6 +6,6 @@
     <title>JS Shaker 2</title>
 </head>
 <body>
-    Hello world! <br> Good to see you...
+    Hello world! <br> <br> Good to see you...
 </body>
 </html>
